--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ main {
     margin: 20px;
     padding: 10px;
     border-radius: 10px;
-    <link href='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css' rel='stylesheet' />
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js'></script>
+<link href='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css' rel='stylesheet' />
+<script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js'></script>
 
 }
 
@@ -46,7 +46,15 @@ main {
     padding: 20px;
     margin: 5px;
     cursor: pointer;
+    width: 120px;
 }
+
+#bouton_menu_actif {
+    background-color: #bbb;
+    color: white;
+    cursor: default;
+}
+
 
 .bouton_menu_gauche {
     display: flex;
@@ -160,7 +168,7 @@ main {
     font-size: 20px;
     padding: 20px;
     border-radius: 10px;
-    width: 250px;
+    width: 270px;
     text-align: center;
 }
 
