--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ main {
     animation: fadeIn 0.5s ease-in;
 }
 
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -210,6 +211,36 @@ main {
 }
 
 
+/*cours*/
+.page_cours{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.section {
+    background-color: #e6e6e6;
+    margin: 10px 0;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.section-header {
+    background-color: #ccc;
+    padding: 15px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.section-content {
+    display: none;
+    padding: 10px 15px;
+    background-color: #f9f9f9;
+}
+
+.active .section-content {
+    display: block;
+}
 
 
 
