--- a/style.css
+++ b/style.css
@@ -255,3 +255,41 @@ main {
 #main_cours{
     width: 100%;
 }
+
+/*notes*/
+#section_notes{
+    background: #d9d9d9;
+    margin: 20px;
+    padding: 15px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.notes-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    font-family: sans-serif;
+    background-color: white;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+.notes-table th,
+.notes-table td {
+    padding: 12px 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+.notes-table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.notes-table tr:hover {
+    background-color: #f9f9f9;
+}
