--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ main {
     border-radius: 10px;
 }
 
+.form-section h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #3A80B6;
+}
+
 
 /*barre menu*/
 .barre_bouton_menu {
@@ -409,11 +415,108 @@ main {
 }
 
 .tab-content {
+    display: none;
     padding: 20px;
     border-radius: 0 0 10px 10px;
-    display: none;
+    flex-direction: row;
+
 }
 
 .tab-content.active {
-    display: block;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+
+}
+
+
+.tab-active{
+    background: #d9d9d9;
+    margin: 20px;
+    padding: 15px;
+    border-radius: 10px;
+    flex-direction: column;
+}
+
+.form-section {
+    border: 2px solid #bbb;
+    border-radius: 5px;
+    width: 400px;
+    margin: 20px 0;
+    padding: 20px;
+}
+
+.form-section input,
+.form-section select {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+.form-section button {
+    width: 100%;
+    padding: 12px;
+    background-color: #3A80B6;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.form-section button:hover {
+    background-color: #2c6190;
+}
+
+#imageUEPreview {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px;
+    background: #f9f9f9;
+}
+
+#ueList .ue-item,
+#userList .user-item {
+    padding: 8px;
+    margin-bottom: 5px;
+    background-color: #f0f0f0;
+    border-radius: 4px;
+}
+
+.list-item {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 6px;
+}
+
+.user-item, .ue-item {
+    flex-grow: 1;
+    text-align: left;
+    padding: 8px;
+    border: 1px solid #ccc;
+    background-color: white;
+    cursor: pointer;
+}
+
+.user-item:hover, .ue-item:hover {
+    background-color: #f0f0f0;
+}
+
+.remove-btn {
+    background-color: transparent;
+    border: none;
+    color: red;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.remove-btn:hover {
+    color: darkred;
 }
