--- a/style.css
+++ b/style.css
@@ -263,6 +263,21 @@ main {
 
 
 
+#posts-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+
+.post {
+    border: 1px solid #ddd;
+    padding: 8px;
+    box-sizing: border-box;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    width: 450px;
+}
+
 
 
 
