mise à j aceuil+agenda

--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ main {
     gap: 10px;
 }
 
-.post {
+.post_aceuil {
     border: 1px solid #ddd;
     padding: 8px;
     box-sizing: border-box;
