--- a/style.css
+++ b/style.css
@@ -280,6 +280,14 @@ main {
 
 
 
+.post-actions {
+    margin-top: 10px;
+}
+
+.edit-button, .delete-button {
+    margin-right: 10px;
+    cursor: pointer;
+}
 
 
 
@@ -501,4 +509,53 @@ main {
 
 .post {
     margin-bottom: 20px;
+}
+
+
+
+#edit-form {
+    display: none;
+    padding: 20px;
+    max-width: 400px;
+    margin: 0 auto;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+
+#edit-form h3 {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+#post-edit-form {
+    display: flex;
+    flex-direction: column;
+}
+
+#post-edit-form label,
+#post-edit-form input,
+#post-edit-form textarea {
+    margin-bottom: 10px;
+}
+
+#post-edit-form input,
+#post-edit-form textarea {
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#post-edit-form button {
+    padding: 8px;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+    background-color: #007bff;
+    color: #fff;
+}
+
+#post-edit-form button[type="button"] {
+    background-color: #dc3545;
 }
